--- a/impl/src/sim_proxy/CMakeLists.txt
+++ b/impl/src/sim_proxy/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.8.9)
-project (fcl_sim_proxy)
+project(fcl_sim_proxy)
 
-add_library(fcl_sim_proxy 
-fcl_sim_proxy.c 
+ADD_LIBRARY(${PROJECT_NAME} 
+    fcl_sim_proxy.c 
 )
 
-target_include_directories(fcl_sim_proxy PRIVATE ../../include .)
-target_link_libraries (fcl_common)
+TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ../../include .)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} fcl_common)
