--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,11 +3,10 @@ project (fcl_test)
 find_package (Threads)
 
 find_package(GTest REQUIRED)
-include_directories(${GTEST_INCLUDE_DIR})
 
-add_executable(fcl_test 
-main.cpp 
+ADD_EXECUTABLE(${PROJECT_NAME} 
+    main.cpp 
 )
 
-target_include_directories(fcl_test PRIVATE ../impl/include)
-target_link_libraries (fcl_test ${GTEST_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} fcl_sim_proxy fcl_fc_proxy fcl_common)
+TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${GTEST_INCLUDE_DIR} PRIVATE ../impl/include)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GTEST_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} fcl_sim_proxy fcl_fc_proxy fcl_common)
