--- a/impl/src/common/CMakeLists.txt
+++ b/impl/src/common/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.8.9)
 project (fcl_common)
 
-add_library(fcl_common 
-udplink.c 
-fcl_base.c
+ADD_LIBRARY(${PROJECT_NAME} 
+    udplink.c 
+    fcl_base.c
 )
 
-target_include_directories(fcl_common PRIVATE ../../include .)
+TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ../../include .)
