--- a/impl/src/common/CMakeLists.txt
+++ b/impl/src/common/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.9)
 project (fcl_common)
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 ADD_LIBRARY(${PROJECT_NAME} 
     udplink.c 
     fcl_base.c
