--- a/impl/src/sim_proxy/CMakeLists.txt
+++ b/impl/src/sim_proxy/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.9)
 project(fcl_sim_proxy)
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 ADD_LIBRARY(${PROJECT_NAME} 
     fcl_sim_proxy.c 
 )
